--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL='mysql://0n86mv5y2vlj98tbhdk8:pscale_pw_G1fvlNMmHtgUoM8yHKY8hx1LrPQALU492EYRVBHs9eS@aws.connect.psdb.cloud/nest-demo?sslaccept=strict'
+DATABASE_URL='mysql://y7ax3swufnix4tnyv24g:pscale_pw_uHzT1w4e2eByZj1aMR0acpdvo9kVjqjACQOJIyqWIDZ@aws.connect.psdb.cloud/nest-test?sslaccept=strict'
