--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "jsonwebtoken": "^9.0.2",
     "nestjs-minio-client": "^2.1.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "serverless": "^3.38.0",
+    "serverless-http": "^3.2.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
