--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.3.1",
     "@nestjs/throttler": "^5.0.0",
+    "@nestjs/websockets": "^10.3.1",
     "@prisma/client": "^5.3.1",
     "argon2": "^0.31.1",
     "bcrypt": "^5.1.1",
